--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -3,6 +3,7 @@
    License: none (public domain)
 */
 
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,7 +49,10 @@ table {
 }
 
 body {
-    font-family: "Montserrat", sans-serif !important;
+	background: #fefefe;
+	font: 14px/20px "Lato", Arial, sans-serif;
+	/* padding: 40px 0; */
+	color: white;
 }
 
 .container {
