--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -10,8 +10,8 @@
 
     <div class="container">
         <div class="login">
-                <input type="text" name="email">
-                <input type="password" name="password">
+                <input type="text" placeholder="email" name="email">
+                <input type="password" placeholder="password" name="password">
                 <button  onclick="login()">Login</button>
         </div>
     </div>
