--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,4 +5,5 @@
 </footer>
 
 <script src="/js/auth.js" type="text/javascript"></script>
-<script src="/js/chat.js" type="text/javascript"></script>
+<!-- <script src="/js/chat.js" type="text/javascript"></script> -->
+<script src="/js/post.js" type="text/javascript"></script>
