--- a/views/pages/create-post.ejs
+++ b/views/pages/create-post.ejs
@@ -11,22 +11,22 @@
     <div class="form-wrap">
       <form>
         <div>
-          <label for="name">Заголовок</label>
+          <label class="span-label" for="name">Заголовок</label>
           <input id="title" type="text" name="name">
         </div>
         <div>
-          <label for="description">Описание</label>
+          <label class="span-label" for="description">Описание</label>
           <input id="description" type="text" name="description">
         </div>
         <div>
-          <label for="description">Картинка</label>
+          <label class="span-label" for="description">Картинка</label>
           <input id="img" type="text" name="img">
         </div>
         <div>
-          <label for="description">Контент</label>
+          <label class="span-label" for="description">Контент</label>
           <input id="content" type="text" name="description">
         </div>
-        <button id="submit" type="button">Отправить</button>
+        <button class="button-create" id="submit" type="button">Отправить</button>
       </form>
     </div>
 
