--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -3,8 +3,10 @@
 }
  
  .chat-container {
-	 margin: 40px auto;
-	 width: 80%;
+	 /* margin: 40px auto;
+	 width: 80%; */
+
+	 height: 90vh;
 	 background: #444753;
 	 border-radius: 5px;
      display: flex;
@@ -31,9 +33,15 @@
 }
  .people-list ul {
 	 padding: 20px;
-	 height: 770px;
+	 height: 70vh;
 }
  .people-list ul li {
+	 padding-bottom: 20px;
+	 cursor: pointer;
+}
+
+ .people-list ul li:hover{
+	background-color: #ececec;
 	 padding-bottom: 20px;
 }
  .people-list img {
@@ -86,10 +94,10 @@
 	 padding: 30px 30px 20px;
 	 border-bottom: 2px solid white;
 	 overflow-y: scroll;
-	 height: 575px;
+	 height: 52vh;
 }
  .chat .chat-history .message-data {
-	 margin-bottom: 15px;
+	 margin-bottom: 5px;
 }
  .chat .chat-history .message-data-time {
 	 color: #a8aab1;
@@ -97,15 +105,15 @@
 }
  .chat .chat-history .message {
 	 color: white;
-	 padding: 18px 20px;
+	 padding: 2px 10px;
 	 line-height: 26px;
-	 font-size: 16px;
+	 font-size: 12px;
 	 border-radius: 7px;
-	 margin-bottom: 30px;
-	 width: 90%;
+	 margin-bottom: 10px;
+	 max-width: 70%;;
 	 position: relative;
 }
- .chat .chat-history .message:after {
+ /* .chat .chat-history .message:after {
 	 bottom: 100%;
 	 left: 7%;
 	 border: solid transparent;
@@ -117,7 +125,7 @@
 	 border-bottom-color: #86bb71;
 	 border-width: 10px;
 	 margin-left: -10px;
-}
+} */
  .chat .chat-history .my-message {
 	 background: #86bb71;
 }
@@ -126,10 +134,11 @@
 }
  .chat .chat-history .other-message:after {
 	 border-bottom-color: #94c2ed;
-	 left: 93%;
+	 left: 60%;
 }
  .chat .chat-message {
 	 padding: 30px;
+	 display: none;
 }
  .chat .chat-message textarea {
 	 width: 100%;
