--- a/public/css/create-post.css
+++ b/public/css/create-post.css
@@ -44,7 +44,7 @@ h1:after {
   left: 50%;
   transform: translateX(-50%);
 }
-label, span {
+.span-label {
   display: block;
   font-size: 14px;
   margin-bottom: 8px;
@@ -60,7 +60,7 @@ input[type="text"] {
 input[type="text"]:focus {
   box-shadow: inset 0 0 0 2px rgba(0,0,0,.2);
 }
-button {
+.button-create {
   padding: 10px 0;
   border-width: 0;
   display: block;
