--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,6 +4,8 @@
 
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
 <script src="/js/auth.js" type="text/javascript"></script>
-<!-- <script src="/js/chat.js" type="text/javascript"></script> -->
+<script src="/js/chat.js" type="text/javascript"></script>
 <script src="/js/post.js" type="text/javascript"></script>
