sdelelali domashku kotoruyu Dima ne sdelal

--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -80,7 +80,7 @@
           <span class="message-data-time">{{time}}, Today</span>
         </div>
         <div class="message my-message">
-          {{response}}
+          {{messageOutput}}
         </div>
       </li>
     </script>
