--- a/views/pages/create-post.ejs
+++ b/views/pages/create-post.ejs
@@ -9,22 +9,22 @@
     <%- include('../partials/header'); %>
 
     <div class="form-wrap">
-      <form>
+      <form class="form">
         <div>
           <label class="span-label" for="name">Заголовок</label>
-          <input id="title" type="text" name="name">
+          <input class="input_data" id="title" type="text" name="name">
         </div>
         <div>
           <label class="span-label" for="description">Описание</label>
-          <input id="description" type="text" name="description">
+          <input class="input_data" id="description" type="text" name="description">
         </div>
         <div>
           <label class="span-label" for="description">Картинка</label>
-          <input id="img" type="text" name="img">
+          <input class="input_data" id="img" type="text" name="img">
         </div>
         <div>
           <label class="span-label" for="description">Контент</label>
-          <input id="content" type="text" name="description">
+          <input class="input_data" id="content" type="text" name="description">
         </div>
         <button class="button-create" id="submit" type="button">Отправить</button>
       </form>
