--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,8 +3,9 @@
     <div class="header-logo">Decode</div>
     <div class="header-menu">
         <ul>
-            <li>Home</li>
-            <li>Chat</li>
+            <li id="header-home">Home</li>
+            <li id="header-chat">Chat</li>
+            <li id="header-profile">Profile</li>
         </ul>
     </div>
 </header>
