--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,12 +10,12 @@
 
     <% for(var i = posts.length - 1; i >= 0; i--) {%>
         <div class="post">
-            <h2><%= posts[i].title %></h2>
-            <h2><%= posts[i].description %></h2>
-            <h2><%= posts[i].img %></h2>
-            <h2><%= posts[i].viewed %></h2>
-            <h2><%= posts[i].content %></h2>
-            <h2><%= posts[i].userid %></h2>
+            <h2 class="post_title"><%= posts[i].title %></h2>
+            <h2 class="post_title"><%= posts[i].description %></h2>
+            <h2 class="post_title"><%= posts[i].img %></h2>
+            <h2 class="post_title"><%= posts[i].viewed %></h2>
+            <h2 class="post_title"><%= posts[i].content %></h2>
+            <h2 class="post_title"><%= posts[i].userid %></h2>
         </div>
     <%} %>
 
