--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,3 +9,5 @@
 <script src="/js/auth.js" type="text/javascript"></script>
 <script src="/js/chat.js" type="text/javascript"></script>
 <script src="/js/post.js" type="text/javascript"></script>
+<script src="/js/profile.js" type="text/javascript"></script>
+<script src="/js/header.js" type="text/javascript"></script>
