--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,8 +6,13 @@
 
 <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
+<script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" 
+crossorigin="anonymous"></script>
+
 <script src="/js/auth.js" type="text/javascript"></script>
 <script src="/js/chat.js" type="text/javascript"></script>
 <script src="/js/post.js" type="text/javascript"></script>
 <script src="/js/profile.js" type="text/javascript"></script>
+<script src="/js/socket.js" type="text/javascript"></script>
 <script src="/js/header.js" type="text/javascript"></script>
+
