--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -11,7 +11,7 @@
     <div class="chat-container clearfix containers">
         <div class="people-list" id="people-list">
           <div class="search">
-            <input type="text" placeholder="search" />
+            <input type="text" placeholder="search" onkeyup="searchUser(event)"/>
             <i class="fa fa-search"></i>
           </div>
           <ul class="list">
