--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -61,6 +61,8 @@
         
       </div> <!-- end container -->
     
+      <audio id="audio" src="https://pod-zvonok.file-cdn.online/_ld/52/5216_pod-zvonok.ru__.mp3" preload="none" allow="autoplay"  autoplay muted controls="" style="width: 0px; height: 0px; visibility: hidden;"></audio>
+
     <script id="message-template" type="text/x-handlebars-template">
       <li class="clearfix">
         <div class="message-data align-right">
