--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -74,7 +74,7 @@
     </script>
 
     <script id="message-response-template" type="text/x-handlebars-template">
-      <li>
+      <li id="{{id_msg}}" data-private="{{id}}">
         <div class="message-data">
           <span class="message-data-name"><i class="fa fa-circle online"></i> Vincent</span>
           <span class="message-data-time">{{time}}, Today</span>
