--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -4,7 +4,6 @@
 
 .round {
   display: none;
-  margin-left: 250px;
   width: 1.2em;
   height: 1.2em;
   border-radius: 50%;
@@ -15,8 +14,8 @@
 }
 
  .chat-container {
-	 /* margin: 40px auto;
-	 width: 80%; */
+	 /* margin: 40px auto;*/
+	/* width: 100%%;  */
 
 	 height: 90vh;
 	 background: #444753;
@@ -24,7 +23,7 @@
      display: flex;
 }
  .people-list {
-	 width: 30%;
+	 width: 25%;
 	 float: left;
 }
  .people-list .search {
@@ -62,6 +61,15 @@
  .people-list .about {
 	 float: left;
 	 margin-top: 8px;
+	 display: flex;
+	 flex-wrap: wrap;
+	 width: 80%;
+}
+.about .name {
+	width: 80%;
+}
+.about .status {
+	width: 80%;
 }
  .people-list .about {
 	 padding-left: 8px;
@@ -70,7 +78,7 @@
 	 color: #92959e;
 }
  .chat {
-	 width: 70%;
+	 width: 75%;
 	 float: left;
 	 background: #f2f5f8;
 	 border-top-right-radius: 5px;
@@ -213,3 +221,7 @@
 .readible{
 	display: block;
 }
+
+
+
+
