--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -13,10 +13,39 @@
           <div class="search">
             <input type="text" placeholder="search" onkeyup="searchUser(event)"/>
             <i class="fa fa-search"></i>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+              Launch demo modal
+            </button>          
           </div>
           <ul class="list">
-
           </ul>
+        </div>
+
+        <select id="select" size="5">
+                    <option class="opt" selected="selected">Переслать</option>
+                    <option class="opt" value="Marketing">Редактировать</option>
+                    <option class="opt" value="Help">Удалить</option>
+        </select>
+
+          
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="chat">
