--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,4 +15,5 @@ crossorigin="anonymous"></script>
 <script src="/js/profile.js" type="text/javascript"></script>
 <script src="/js/socket.js" type="text/javascript"></script>
 <script src="/js/header.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
