--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -13,9 +13,7 @@
           <div class="search">
             <input type="text" placeholder="search" onkeyup="searchUser(event)"/>
             <i class="fa fa-search"></i>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-              Launch demo modal
-            </button>          
+            <button id = "plus" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">+</button>
           </div>
           <ul class="list">
           </ul>
@@ -27,22 +25,56 @@
                     <option class="opt" value="Help">Удалить</option>
         </select>
 
-          
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+        <div class="bd-example">
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="exampleModalLabel">Создать группу</h4>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="recipient-name" class="form-control-label">Название:</label>
+                      <input type="text" class="form-control" id="recipient-name">
+                    </div>
+                    <div class="form-group">
+                      <label for="recipient-name" class="form-control-label">Описание:</label>
+                      <input type="text" class="form-control" id="recipient-name">
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button onclick="createGroup()" type="button" data-dismiss="modal" data-toggle="modal" data-target="#exampleModal1" class="btn btn-primary">создать</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <h4 class="modal-title" id="exampleModalLabel">Добавить пользователей</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
-                ...
+                <form>
+                    <input class="form-control" type="text" placeholder="search" onkeyup="searchUserGroup(event)"/>
+                    <div id="listGroupUser">
+
+                    </div>
+                </form>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button onclick="addUserInGroup()" type="button" data-dismiss="modal" class="btn btn-primary">добавить</button>
               </div>
             </div>
           </div>
