--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -2,6 +2,24 @@
 	 box-sizing: border-box;
 }
 
+.list-group-item{
+    background-color: RGB(68, 71 , 83) !important;
+}
+
+.check{
+    width: 20px;
+    height: 20px;
+    margin-left: 90% !important;
+}
+
+#listGroupUser{
+    margin-top: 20px;
+}
+
+.white{
+    color: white !important;
+}
+
 #select{
     background-color:white;
     border: none;
@@ -14,6 +32,10 @@
     z-index: 9999;
     display: none;
     position: absolute;
+}
+
+#plus{
+    font-size: 20px !important;
 }
 
 .opt{
@@ -40,78 +62,6 @@
     border: none;
 }
 
-.btn {
-  box-sizing: border-box;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background-color: transparent;
-  border: 2px solid #e74c3c;
-  border-radius: 0.6em;
-  color: #e74c3c;
-  cursor: pointer;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-self: center;
-      -ms-flex-item-align: center;
-          align-self: center;
-  font-size: 0.8rem;
-  font-weight: 400;
-  line-height: 1;
-  margin: 20px;
-  margin-left: 33%;
-  padding: 1.2em 2.8em;
-  text-decoration: none;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-}
-.btn:hover, .btn:focus {
-  color: #fff;
-  outline: 0;
-}
-
-
-.fifth {
-  border-color: RGB(1, 0 , 66);
-  border-radius: 0;
-  color: RGB(1, 0 , 66);
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  -webkit-transition: color 150ms ease-in-out;
-  transition: color 250ms ease-in-out;
-}
-.fifth:after {
-  content: '';
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 0;
-  height: 100%;
-  background: RGB(1, 0 , 66);
-  z-index: -1;
-  -webkit-transition: width 150ms ease-in-out;
-  transition: width 250ms ease-in-out;
-}
-.fifth:hover {
-  color: #fff;
-}
-.fifth:hover:after {
-  width: 110%;
-}
-
-.plus{
-    text-decoration: none;
-    color:white;
-}
-
 
 .name-group::placeholder{
     color:RGB(68, 71 , 83);
@@ -132,134 +82,6 @@
 .name-group:hover {
   box-shadow:0 0 4px rgba(0,0,0,0.5);
 }
-
-/* свойства модального окна по умолчанию */
-    .modal {
-      position: absolute;
-      /* фиксированное положение */
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background: rgba(0, 0, 0, 0.5);
-      /* цвет фона */
-      z-index: 1050;
-      opacity: 0;
-      /* по умолчанию модальное окно прозрачно */
-      /* -webkit-transition: opacity 400ms ease-in;
-      -moz-transition: opacity 400ms ease-in;
-      transition: opacity 400ms ease-in; */
-      /* анимация перехода */
-      pointer-events: none;
-      /* элемент невидим для событий мыши */
-    }
-
-    /* при отображении модального окно */
-    .modal:target {
-      opacity: 1;
-      pointer-events: auto;
-      overflow-y: auto;
-    }
-
-    /* ширина модального окна и его отступы от экрана */
-    .modal-dialog {
-      position: relative;
-      width: auto;
-      margin: 10px;
-    }
-
-    @media (min-width: 576px) {
-      .modal-dialog {
-        max-width: 500px;
-        margin: 30px auto;
-      }
-    }
-
-    /* свойства для блока, содержащего контент модального окна */
-    .modal-content {
-      position: relative;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      background-color: #fff;
-      -webkit-background-clip: padding-box;
-      background-clip: padding-box;
-      border: 1px solid rgba(0, 0, 0, .2);
-      border-radius: .3rem;
-      outline: 0;
-    }
-
-    @media (min-width: 768px) {
-      .modal-content {
-        -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-      }
-    }
-
-    /* свойства для заголовка модального окна */
-    .modal-header {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-      -ms-flex-align: center;
-      align-items: center;
-      -webkit-box-pack: justify;
-      -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-      justify-content: space-between;
-      padding: 15px;
-      border-bottom: 1px solid #eceeef;
-    }
-
-    .modal-title {
-      margin-top: 0;
-      margin-bottom: 0;
-      line-height: 1.5;
-      font-size: 1.25rem;
-      font-weight: 500;
-    }
-
-    /* свойства для кнопки "Закрыть" */
-    .close {
-      float: right;
-      font-family: sans-serif;
-      font-size: 24px;
-      font-weight: 700;
-      line-height: 1;
-      color: #000;
-      text-shadow: 0 1px 0 #fff;
-      opacity: .5;
-      text-decoration: none;
-    }
-
-    /* свойства для кнопки "Закрыть" при нахождении её в фокусе или наведении */
-    .close:focus,
-    .close:hover {
-      color: #000;
-      text-decoration: none;
-      cursor: pointer;
-      opacity: .75;
-    }
-
-    /* свойства для блока, содержащего основное содержимое окна */
-    .modal-body {
-      position: relative;
-      -webkit-box-flex: 1;
-      -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-      flex: 1 1 auto;
-      padding: 15px;
-      overflow: auto;
-    }
 
 .round {
   display: none;
@@ -288,11 +110,6 @@
 	font-size:30px;
 	display:inline-block;
 	color:white;
-}
-
-.plus:hover{
-    color: skyblue;
-    font-size:35px;
 }
 
  .chat-container {
