--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -16,19 +16,21 @@
 
                     <div class="user_name">
 
-                        <h1 class="name_surname">Дима Пермяков</h1>
+                        <h1 class="name_surname">Name</h1>
 
                     </div>
 
                     <img class = "avatar" src="https://pbs.twimg.com/profile_images/860132866453381120/VPBwbmkr_400x400.jpg" alt="">
 
                 </div>
+
+                <button type="button" onclick="userExit()" class="btn btn-outline-danger exit">Выйти</button>
             </div>
 
             <div class="generail_info">
 
                 <div class="user_info">
-                    <h2 id = "role" class="text_generail_info">Role: User</h2>
+                    <h2 id = "role" class="text_generail_info">Роль: User</h2>
                 </div>
                 <div class="user_info">
                     <h2 id = "mail" class="text_generail_info">Почта: dimazavr1337@mail.com</h2>
@@ -40,10 +42,6 @@
                     <h2 id = "age" class="text_generail_info">Возраст: 14</h2>
                 </div>
 
-                <form action="" class="index1">
-                    <input type="submit" value="Изменить " class="change">
-
-                </form>
             </div>
         </div>
 
