--- a/public/css/create-post.css
+++ b/public/css/create-post.css
@@ -1,61 +1,4 @@
-
-.form-wrap {
-  width: 550px;
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  font-family: 'Open Sans', sans-serif;
-}
-.form-wrap *{transition: .1s linear}
-.form {
-  background: white;
-  float: left;
-  width: calc(100% - 240px);
-  padding: 30px;
-  border-radius: 0 20px 20px 0;
-  color: #7b7b7b;
-}
-.form-wrap:after, .form div:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.form div {
-  margin-bottom: 15px;
-  position: relative;
-}
-.span-label {
-  display: block;
-  font-size: 14px;
-  margin-bottom: 8px;
-}
-.input_data {
-  width: 100%;
-  padding: 10px 15px;
-  border-width: 0;
-  background: #e6e6e6;
-  outline: none;
-  margin: 0;
-}
-.input_data:focus {
-  box-shadow: inset 0 0 0 2px rgba(0,0,0,.2);
-}
-.button-create {
-  padding: 10px 0;
-  border-width: 0;
-  display: block;
-  width: 120px;
-  margin: 25px auto 0;
-  background: #60e6c5;
-  color: white;
-  font-size: 14px;
-  outline: none;
-  text-transform: uppercase;
-}
-@media (max-width: 600px) {
-  body {display: block}
-  .form-wrap {margin: 20px auto; max-width: 550px; width:100%}
-  .profile, form {float: none; width: 100%}
-  h1 {margin-top: auto; padding-bottom: 50px;}
-  form {border-radius: 0 0 20px 20px}
+#submit{
+    margin-left: 40%;
+    margin-top: 5%;
 }
