--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,3 +1,5 @@
+
+
 .general_contain {
     margin-top: 10px;
     display: flex;
@@ -5,11 +7,16 @@
     justify-content: center;
 }
 
+.exit{
+  margin-left: 36%;
+  margin-top: 8%;
+}
+
 .main_contain {
 
 
     width: 300px;
-    height: 300px;
+    height: 330px;
 
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -44,7 +51,7 @@
 
     margin-left: 20px;
     width: 500px;
-    height: 425px;
+    height: 300px;
 
     background-color: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
