--- a/views/pages/create-post.ejs
+++ b/views/pages/create-post.ejs
@@ -8,26 +8,32 @@
 <body>
     <%- include('../partials/header'); %>
 
-    <div class="form-wrap">
-      <form class="form">
-        <div>
-          <label class="span-label" for="name">Заголовок</label>
-          <input class="input_data" id="title" type="text" name="name">
-        </div>
-        <div>
-          <label class="span-label" for="description">Описание</label>
-          <input class="input_data" id="description" type="text" name="description">
-        </div>
-        <div>
-          <label class="span-label" for="description">Картинка</label>
-          <input class="input_data" id="img" type="text" name="img">
-        </div>
-        <div>
-          <label class="span-label" for="description">Контент</label>
-          <input class="input_data" id="content" type="text" name="description">
-        </div>
-        <button class="button-create" id="submit" type="button">Отправить</button>
-      </form>
+    <div class="body-form">
+        <h1 class="title-form">Создать пост</h1>
+
+        <form class="login" method="post">
+
+            <label class="username form-label" for="title">Заголовок: </label>
+            <input name="email" id="title" class="form-control" type="username"/>
+
+            <br />
+
+            <label  class="form-label" for="description">Описание: </label>
+            <input name="password" id="description" class="form-control" type="username"/>
+
+            <br />
+
+            <label  class="form-label" for="img">Картинка: </label>
+            <input name="password" id="img" class="form-control" type="username"/>
+
+            <br />
+
+            <label  class="form-label" for="content">Контент: </label>
+            <input name="password" id="content" class="form-control" type="username"/>
+
+            <input id="submit" type="button" value="Создать" class="btn btn-outline-primary" />
+        </form>
+
     </div>
 
     <%- include('../partials/footer'); %>
