--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,10 +3,8 @@
 
 
 </footer>
-<script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
@@ -16,6 +14,6 @@ crossorigin="anonymous"></script>
 <script src="/js/auth.js" type="text/javascript"></script>
 <script src="/js/chat.js" type="text/javascript"></script>
 <script src="/js/post.js" type="text/javascript"></script>
-<script src="/js/profile.js" type="text/javascript"></script>
+<script defer src="/js/profile.js" type="text/javascript"></script>
 <script src="/js/socket.js" type="text/javascript"></script>
 <script src="/js/header.js" type="text/javascript"></script>
